<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/topic_menu_like"
        android:title="@string/collect"
        android:icon="@drawable/ic_collect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/topic_menu_edit"
        android:title="编辑"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"/>

    <item android:id="@+id/topic_menu_add_text"
        android:title="@string/add_text"
        android:icon="@drawable/ic_text_fields"
        app:showAsAction="never"/>

    <item android:id="@+id/topic_menu_add_camera"
        android:title="@string/add_picture_camera"
        android:icon="@drawable/ic_camera"
        app:showAsAction="never"/>

    <item android:id="@+id/topic_menu_add_album"
        android:title="@string/add_picture_album"
        android:icon="@drawable/ic_album"
        app:showAsAction="never"/>



    <item android:id="@+id/topic_menu_show_original"
        android:title="@string/show_original_images"
        android:checked="true"
        android:checkable="true"
        app:showAsAction="never"/>

</menu>