<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.luckyxmobile.correction.ui.views.CheckMenuItemView
            android:id="@+id/drawing_view_tool_highlighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            app:checked_img="@drawable/ic_highlighter_blue"
            app:unchecked_img="@drawable/ic_paint_unchecked"
            app:menu_text="荧光笔"
            app:checked_text_color="@color/orange_f7"
            app:default_checked="true"/>

        <com.luckyxmobile.correction.ui.views.CheckMenuItemView
            android:id="@+id/drawing_view_tool_white_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:checked_img="@drawable/ic_paint_white_out_check"
            app:unchecked_img="@drawable/ic_paint_white_out_uncheck"
            app:checked_text_color="@color/orange_f7"
            app:menu_text="@string/white_out"/>

        <com.luckyxmobile.correction.ui.views.CheckMenuItemView
            android:id="@+id/drawing_view_tool_erase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:checked_img="@drawable/ic_paint_erase_checked"
            app:unchecked_img="@drawable/ic_paint_erase_unchecked"
            app:checked_text_color="@color/orange_f7"
            app:menu_text="@string/erase"/>

        <com.luckyxmobile.correction.ui.views.CheckMenuItemView
            android:id="@+id/drawing_view_tool_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:checked_img="@drawable/ic_paint_width_check_24dp"
            app:unchecked_img="@drawable/ic_paint_width_uncheck_24dp"
            app:checked_text_color="@color/orange_f7"
            app:menu_text="@string/width"/>

        <com.luckyxmobile.correction.ui.views.CheckMenuItemView
            android:id="@+id/drawing_view_tool_contrast_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:checked_img="@drawable/ic_paint_contrast_ratio_checked"
            app:unchecked_img="@drawable/ic_paint_contrast_ratio_unchecked"
            app:checked_text_color="@color/orange_f7"
            app:menu_text="@string/contrast_ratio"/>
</merge>