<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/select_book_dialog_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:background="@drawable/shape_box_fillet_shadow_view"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic_image_type"
        android:layout_marginTop="8dp"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/select_book_dialog_topic_image_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:ignore="MissingConstraints"/>

    <TextView
        android:id="@+id/select_book_dialog_note_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notebook"
        android:layout_marginTop="8dp"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/select_book_dialog_note_book_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:ignore="MissingConstraints"/>


    <Button
        android:id="@+id/ensure_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_ensure_btn"
        android:text="@string/ensure"
        android:textColor="@color/colorWhite"/>

</LinearLayout>
