<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_view_bg"
    tools:context="com.luckyxmobile.correction.ui.activity.MainActivity">


    <!--使用Toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/menu_pop_window"
        app:title="@string/app_name"/>


   <androidx.core.widget.NestedScrollView
       android:id="@+id/scrollView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/toolbar"
       android:fillViewport="true"
       android:background="@color/transparent">

       <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

           <TextView
               android:id="@+id/my_notebook"
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:layout_alignParentTop="true"
               android:layout_alignParentStart="true"
               android:gravity="center|start"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:text="@string/my_notebooks"
               android:textColor="@color/colorPrimary"
               android:background="@color/colorWhite"/>

           <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_head_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/my_notebook"
               android:padding="8dp"
                android:background="@drawable/main_centre_background" />

           <Button
               android:id="@+id/add_book_main"
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:layout_above="@id/rv_head_book"
               android:layout_alignEnd="@id/rv_head_book"
               android:gravity="center|end"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:text="@string/new_notebook"
               android:textColor="@color/colorAccent"
               android:background="@color/transparent"/>

           <TextView
               android:id="@+id/tv_recent_topic"
               android:layout_width="match_parent"
               android:layout_height="32dp"
               android:layout_marginTop="4dp"
               android:layout_marginBottom="2dp"
               android:layout_below="@+id/rv_head_book"
               android:gravity="center_vertical"
               android:paddingStart="16dp"
               android:paddingEnd="16dp"
               android:text="@string/recent_topic"
               android:textColor="@color/colorPrimary"/>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/main_recycler_recent_topic"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/tv_recent_topic"
               android:paddingBottom="64dp"/>

       </RelativeLayout>

   </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_add_topic"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_add_white_24dp"/>

</RelativeLayout>